--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,10 @@
 .res-container{
   display: flex;
 }
+.filter-btn{
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #000;
+  border-radius: 10px;
+  cursor: pointer;
+}
